# eqsat-mod-ac

./: .clang-format  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  STYLE_GUIDE.md  demo.cpp  dump_endo.txt  dump_endo1.txt  dump_endo2.txt  dump_endo3.txt  dump_endo_old.txt  dump_group.txt  justfile
evaluation/: a_inv_a.cpp  endomorphism.cpp  groups.cpp  horner.cpp  idempotence.cpp  ring.cpp
evaluation/boolean_algebra/: boolean_algebra.cpp
evaluation/groups/: groups0.cpp  groups1.cpp  groups2.cpp  groupsn.cpp  terms.txt
src/: abstract_set.cpp  abstract_set.h  compiler.cpp  compiler.h  database.cpp  database.h  egraph.cpp  egraph.h  egraph_di.cpp  egraph_di.h  engine.cpp  engine.h  enode.h  handle.cpp  handle.h  id.h  parser.cpp  parser.h  pattern_compiler.cpp  pattern_compiler.h  permutation.cpp  permutation.h  query.cpp  query.h  query_compiler.cpp  query_compiler.h  set_interface.cpp  set_interface.h  sorted_set.cpp  sorted_set.h  symbol_table.cpp  symbol_table.h  theory.cpp  theory.h  trie.cpp  trie.h  trie_index.cpp  trie_index.h  types.h  union_find.cpp  (+1 more)
src/indices/: abstract_index.h  multiset_index.cpp  multiset_index.h  trie_index.cpp  trie_index.h
src/relations/: abstract_relation.h  relation_ac.cpp  relation_ac.h  relation_ac2.cpp  relation_ac2.h  row_store.cpp  row_store.h
src/sets/: abstract_set.cpp  abstract_set.h  hashmap_wrapper.h  multiset_support.h  singleton_set.h  sorted_iter_set.h  sorted_set.cpp  sorted_set.h  sorted_vec_set.cpp  sorted_vec_set.h
src/utils/: hash.h  hashmap.h  multiset.h  permutation.cpp  permutation.h  vec.h
systemtests/: test_ac_advanced.cpp  test_ac_operators.cpp  test_congruence.cpp  test_database.cpp  test_egraph_basic.cpp  test_egraph_rewrite.cpp  test_multiplicative_identity.cpp
test/: test_pattern_compiler.cpp  test_set_interface.cpp
tests/system/: test_ac_advanced.cpp  test_ac_operators.cpp  test_congruence.cpp  test_database.cpp  test_egraph_basic.cpp  test_multiplicative_identity.cpp
tests/unit/: test_abstract_set.cpp  test_compiler.cpp  test_engine.cpp  test_multiset_index.cpp  test_parser.cpp  test_permutation.cpp  test_query_builder.cpp  test_sorted_set.cpp  test_trie_index.cpp
tests/utils/: query_builder.h  theory_fixtures.h
unittests/: test_abstract_set.cpp  test_compiler.cpp  test_engine.cpp  test_ephemeral_ids.cpp  test_multiset.cpp  test_multiset_index.cpp  test_parser.cpp  test_pattern_compiler.cpp  test_permutation.cpp  test_set_implementations.cpp  test_set_interface.cpp  test_sorted_set.cpp  test_trie_index.cpp  test_union_find.cpp
